# sliding_quantiles

./: CMakeLists.txt  README.md
include/: histogram_quantiles.hpp
include/quern/: bin_table.hpp  binning.hpp  binning_auto.hpp  binning_multi.hpp  dof.hpp  grid.hpp  histogram.hpp  histogram_old.hpp  histogram_tracked.hpp  quantile.hpp  slice.hpp
test/: main.cpp
